modify create cluster

--- a/2.create-cluster.md
+++ b/2.create-cluster.md
@@ -43,35 +43,24 @@ kubectl cluster-info --context kind-agb
 Not sure what to do next? 😅  Check out https://kind.sigs.k8s.io/docs/user/quick-start/
 ```
 
-### 3. Check the cluster info as root as `kind` mentioned
+### 3. Before anything go further, we need to print out the cluster `kubeconfig`
 
 ```
-sudo kubectl cluster-info --context kind-agb
-```
-
-```
-Kubernetes control plane is running at https://127.0.0.1:45525
-CoreDNS is running at https://127.0.0.1:45525/api/v1/namespaces/kube-system/services/kube-dns:dns/proxy
-
-To further debug and diagnose cluster problems, use 'kubectl cluster-info dump'.
+mkdir ~/.kube
+sudo kind get kubeconfig -n agb > ~/.kube/config
+kubectl get nodes
 ```
 
 ```
-sudo kubectl get nodes -o wide
-```
-
-```
-NAME                STATUS   ROLES           AGE   VERSION   INTERNAL-IP   EXTERNAL-IP   OS-IMAGE                         KERNEL-VERSION     CONTAINER-RUNTIME
-agb-control-plane   Ready    control-plane   10h   v1.29.4   10.89.0.4     <none>        Debian GNU/Linux 12 (bookworm)   6.8.0-39-generic   containerd://1.7.15
-agb-worker          Ready    <none>          10h   v1.29.4   10.89.0.3     <none>        Debian GNU/Linux 12 (bookworm)   6.8.0-39-generic   containerd://1.7.15
-agb-worker2         Ready    <none>          10h   v1.29.4   10.89.0.2     <none>        Debian GNU/Linux 12 (bookworm)   6.8.0-39-generic   containerd://1.7.15
+NAME                STATUS   ROLES           AGE   VERSION
+agb-control-plane   Ready    control-plane   23h   v1.29.4
+agb-worker          Ready    <none>          23h   v1.29.4
+agb-worker2         Ready    <none>          23h   v1.29.4
 
 ```
 
 As we declare in `yaml` file, the cluster is running with 2 worker nodes.
 
-```
-sudo kubectl get pods
-```
+### 4. Cluster Architecture
 
-### 4. Print out the cluster config as root with `kind get kubeconfig`
+![Cluster Architecture](https://kubernetes.io/images/docs/kubernetes-cluster-architecture.svg "Cluster Architecture")
