--- a/2.create-cluster.md
+++ b/2.create-cluster.md
@@ -43,7 +43,7 @@ kubectl cluster-info --context kind-agb
 Not sure what to do next? 😅  Check out https://kind.sigs.k8s.io/docs/user/quick-start/
 ```
 
-### 3. Before anything go further, we need to print out the cluster `kubeconfig`
+### 3. Before anything go further, we need to print out the "agb" cluster `kubeconfig`
 
 ```
 mkdir ~/.kube
