--- a/3.nginx-deployment.md
+++ b/3.nginx-deployment.md
@@ -83,3 +83,34 @@ A pod has been replaced.
 
 ### 4. Scale up and down the replicas with `kubectl scale deployment <deployment-name>`
 
+#### input
+
+```
+kubectl scale deployment nginx-deployment --replicas=4
+```
+
+#### output
+
+```
+deployment.apps/nginx-deployment scaled
+```
+
+#### input
+
+```
+kubectl get pods
+```
+
+#### output
+
+```
+NAME                                READY   STATUS    RESTARTS        AGE
+nginx-deployment-86dcfdf4c6-j5xdt   1/1     Running   1 (6d17h ago)   7d10h
+nginx-deployment-86dcfdf4c6-mbssd   1/1     Running   1 (6d17h ago)   7d12h
+nginx-deployment-86dcfdf4c6-tw5q7   1/1     Running   1 (6d17h ago)   7d12h
+nginx-deployment-86dcfdf4c6-zbpbf   1/1     Running   0               11s
+```
+
+A pod has been added.
+
+At this point, we haven't accessed to our containers yet. We need to create a servce.
