--- a/1.installation.md
+++ b/1.installation.md
@@ -4,6 +4,8 @@
 
 ### 1. For Linux
 
+#### input
+
 ```
 # For AMD64 / x86_64
 [ $(uname -m) = x86_64 ] && curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.23.0/kind-linux-amd64
@@ -15,9 +17,13 @@ For other OS check at [kind - Quick Start](https://kind.sigs.k8s.io/docs/user/qu
 
 ### 2. Check `kind` commands
 
+#### input
+
 ```
 kind --help
 ```
+
+#### output
 
 ```
 kind creates and manages local Kubernetes clusters using Docker container 'nodes'
@@ -53,11 +59,15 @@ Use "kind [command] --help" for more information about a command.
 
 ### 1. For Linux, download latest release
 
+#### input
+
 ```
 curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
 ```
 
 ### 2. Install `kubectl`
+
+#### input
 
 ```
 sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
@@ -65,9 +75,13 @@ sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
 
 ### 3. Check `kubectl` commands
 
+#### input
+
 ```
 kubectl --help
 ```
+
+#### output
 
 ```
 kubectl controls the Kubernetes cluster manager.
