--- a/2.create-cluster.md
+++ b/2.create-cluster.md
@@ -21,9 +21,13 @@ networking:
 
 ### 2. Create cluster as root using `kind create cluster`
 
+#### input
+
 ```
 kind create cluster --config cluster.yaml -n agb
 ```
+
+#### output
 
 ```
 enabling experimental podman provider
@@ -45,11 +49,15 @@ Not sure what to do next? 😅  Check out https://kind.sigs.k8s.io/docs/user/qui
 
 ### 3. Before anything go further, we need to print out the "agb" cluster `kubeconfig`
 
+#### input
+
 ```
 mkdir ~/.kube
 sudo kind get kubeconfig -n agb > ~/.kube/config
 kubectl get nodes
 ```
+
+#### output
 
 ```
 NAME                STATUS   ROLES           AGE   VERSION
