--- a/3.nginx-deployment.md
+++ b/3.nginx-deployment.md
@@ -34,9 +34,13 @@ for more information, [Kubernetes Deployments](https://kubernetes.io/docs/concep
 
 ### 2. Check deployment state over time with `kubectl get pods`
 
+#### input
+
 ```
 kubectl get pods
 ```
+
+#### output
 
 ```
 NAME                                READY   STATUS              RESTARTS   AGE
@@ -45,9 +49,13 @@ nginx-deployment-86dcfdf4c6-mbssd   0/1     ContainerCreating   0          19s
 nginx-deployment-86dcfdf4c6-tw5q7   0/1     ContainerCreating   0          19s
 ```
 
+#### input
+
 ```
 kubectl get pods
 ```
+
+#### output
 
 ```
 NAME                                READY   STATUS    RESTARTS   AGE
@@ -60,17 +68,25 @@ As we declare, 3 pods are running.
 
 ### 3. Delete pods with `kubectl delete pod <pod-name>`, to ensure the replica set
 
+#### input
+
 ```
 kubectl delete pod nginx-deployment-86dcfdf4c6-7pnwk
 ```
+
+#### output
 
 ```
 pod "nginx-deployment-86dcfdf4c6-7pnwk" deleted
 ```
 
+#### input
+
 ```
 kubectl get pods -o wide
 ```
+
+#### output
 
 ```
 NAME                                READY   STATUS    RESTARTS   AGE    IP           NODE          NOMINATED NODE   READINESS GATES
@@ -79,7 +95,7 @@ nginx-deployment-86dcfdf4c6-mbssd   1/1     Running   0          108m   10.244.2
 nginx-deployment-86dcfdf4c6-tw5q7   1/1     Running   0          108m   10.244.1.2   agb-worker2   <none>           <none>
 ```
 
-A pod has been replaced.
+A pod has been recreated.
 
 ### 4. Scale up and down the replicas with `kubectl scale deployment <deployment-name>`
 
@@ -113,4 +129,87 @@ nginx-deployment-86dcfdf4c6-zbpbf   1/1     Running   0               11s
 
 A pod has been added.
 
-At this point, we haven't accessed to our containers yet. We need to create a servce.
+### 5. Add strategy in `nginx-deployment.yaml` for rolling update in deployment
+
+Users expect applications to be available all the time, and developers are expected to deploy new versions of them several times a day. In Kubernetes this is done with rolling updates. For more information, [Performing a Rolling Update](https://kubernetes.io/docs/tutorials/kubernetes-basics/update/update-intro/)
+
+![Rolling updates overview](https://kubernetes.io/docs/tutorials/kubernetes-basics/public/images/module_06_rollingupdates4.svg)
+
+```
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+    name: nginx-deployment
+    labels:
+        app: nginx
+spec:
+    strategy:
+        type: RollingUpdate
+        rollingUpdate:
+            maxUnavailable: 1
+            maxSurge: 1 
+    replicas: 7
+    selector:
+        matchLabels:
+            app: nginx
+    template:
+        metadata:
+            labels:
+                app: nginx
+        spec:
+            containers:
+                - name: nginx
+                  image: nginx:1.15.12
+                  ports:
+                      - containerPort: 80
+```
+
+#### input
+
+```
+kubectl apply -f nginx-deployment.yaml
+```
+
+#### output
+
+```
+deployment.apps/nginx-deployment configured
+```
+
+#### input
+
+```
+kubectl rollout status deployment nginx-deployment
+```
+
+#### output
+
+```
+Waiting for deployment "nginx-deployment" rollout to finish: 2 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 2 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 2 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 2 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 3 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 3 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 3 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 3 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 3 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 4 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 4 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 4 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 4 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 5 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 5 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 5 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 5 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 6 out of 7 new replicas have been updated...
+Waiting for deployment "nginx-deployment" rollout to finish: 1 old replicas are pending termination...
+Waiting for deployment "nginx-deployment" rollout to finish: 1 old replicas are pending termination...
+Waiting for deployment "nginx-deployment" rollout to finish: 1 old replicas are pending termination...
+Waiting for deployment "nginx-deployment" rollout to finish: 6 of 7 updated replicas are available...
+deployment "nginx-deployment" successfully rolled out
+```
+
+Now we have updated all pods to new version.
+
+At this point, we haven't accessed to our containers yet. We need to create a service.
