--- a/2.create-cluster.md
+++ b/2.create-cluster.md
@@ -24,7 +24,7 @@ networking:
 #### input
 
 ```
-kind create cluster --config cluster.yaml -n agb
+sudo kind create cluster --config cluster.yaml -n agb
 ```
 
 #### output
