--- a/3.deployment.md
+++ b/3.deployment.md
@@ -4,7 +4,7 @@
 
 ### 1. Create `nginx-deployment.yaml` file
 
-```
+```yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -135,7 +135,7 @@ Users expect applications to be available all the time, and developers are expec
 
 ![Rolling updates overview](https://kubernetes.io/docs/tutorials/kubernetes-basics/public/images/module_06_rollingupdates4.svg)
 
-```
+```yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
