--- a/5.config-map-and-secret.md
+++ b/5.config-map-and-secret.md
@@ -4,7 +4,7 @@
 
 ### 1. Create `mongodb-config.yaml` file
 
-```
+```yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -17,7 +17,7 @@ data:
 
 ### 2. Apply
 
-```
+```bash
 kubectl apply -f mongodb-config.yaml
 ```
 
@@ -25,7 +25,7 @@ kubectl apply -f mongodb-config.yaml
 
 input
 
-```
+```bash
 kubectl get configmap
 ```
 
@@ -39,7 +39,7 @@ mongodb-config     3      41s
 
 input
 
-```
+```bash
 kubectl get configmap mongodb-config
 ```
 
@@ -81,7 +81,7 @@ for more information, [Kubernetes Config Map](https://kubernetes.io/docs/concept
 
 ### 1. Create `mongodb-secret.yaml` file
 
-```
+```yaml
 apiVersion: v1
 kind: Secret
 metadata:
@@ -96,7 +96,7 @@ data:
 
 ### 2. Apply
 
-```
+```bash
 kubectl apply -f mongodb-secret.yaml
 ```
 
@@ -104,7 +104,7 @@ kubectl apply -f mongodb-secret.yaml
 
 input
 
-```
+```bash
 kubectl get secret
 ```
 
@@ -117,7 +117,7 @@ mongodb-secret   Opaque   2      5s
 
 input
 
-```
+```bash
 kubectl describe secret mongo-secret
 ```
 
