modify stateful set

--- a/6.pv-pvc-and-storage-class.md
+++ b/6.pv-pvc-and-storage-class.md
@@ -1,16 +1,6 @@
 # PV, PVC and Storage Class
 
-### **Key Differences**
-
-| Aspect           | Static PV + PVC                      | StorageClass + PVC                     |
-| ---------------- | ------------------------------------ | -------------------------------------- |
-| **Provisioning** | Manual (admin creates PVs first).    | Dynamic (PVs are created on demand).   |
-| **Scalability**  | Low (manual scaling needed).         | High (Kubernetes handles it).          |
-| **Flexibility**  | Limited (requires predefining PVs).  | High (PVCs are dynamically satisfied). |
-| **Management**   | Cumbersome for large-scale clusters. | Simplifies storage administration.     |
-| **Automation**   | Not inherently automated.            | Automated with StorageClass.           |
-
-## Create PV (Persistent Volume) and bind with PVC (Persistent Volume Claim)
+## Create PV (Persistent Volume)
 
 ### 1. Create `mongodb-pv.yaml` file
 
@@ -22,9 +12,9 @@ metadata:
     labels:
         type: local
 spec:
-    storageClassName: manual
+    storageClassName: local-storage
     accessModes:
-        - ReadWriteOnce
+        - ReadWriteOnce     # https://kubernetes.io/docs/concepts/storage/persistent-volumes/#access-modes
     capacity:
         storage: 10Gi
     local:
@@ -33,10 +23,10 @@ spec:
         required:
             nodeSelectorTerms:
                 - matchExpressions:
-                      - key: kubernetes.io/hostname
-                        operator: In
-                        values:
-                            - agb-worker
+                    - key: kubernetes.io/hostname
+                      operator: In
+                      values:
+                        - agb-worker    # node-name
 ```
 
 input
@@ -72,7 +62,7 @@ kind: PersistentVolumeClaim
 metadata:
     name: mongodb-pvc
 spec:
-    storageClassName: manual
+    storageClassName: local-storage
     accessModes:
         - ReadWriteOnce
     resources:
@@ -102,7 +92,7 @@ output
 
 ```
 NAME          STATUS   VOLUME       CAPACITY   ACCESS MODES   STORAGECLASS   VOLUMEATTRIBUTESCLASS   AGE
-mongodb-pvc   Bound    mongodb-pv   10Gi       RWO            manual         <unset>                 2m25s
+mongodb-pvc   Bound    mongodb-pv   10Gi       RWO            local-storage         <unset>                 2m25s
 ```
 
 input
@@ -115,28 +105,15 @@ output
 
 ```
 NAME         CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS   CLAIM                 STORAGECLASS   VOLUMEATTRIBUTESCLASS   REASON   AGE
-mongodb-pv   10Gi       RWO            Retain           Bound    default/mongodb-pvc   manual         <unset>                          12m
+mongodb-pv   10Gi       RWO            Retain           Bound    default/mongodb-pvc   local-storage         <unset>                          12m
 ```
 
-### 3. Using with `local-storage` storage class
+Managing storage is a distinct problem from managing compute instances. The PersistentVolume subsystem provides an API for users and administrators that abstracts details of how storage is provided from how it is consumed. To do this, we introduce two new API resources: PersistentVolume and PersistentVolumeClaim.
 
-```yaml
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-    name: mongodb-pvc
-spec:
-    storageClassName: local-storage
-    accessModes:
-        - ReadWriteOnce
-    resources:
-        requests:
-            storage: 2Gi
-```
+A PersistentVolume (PV) is a piece of storage in the cluster that has been provisioned by an administrator or dynamically provisioned using Storage Classes. It is a resource in the cluster just like a node is a cluster resource. PVs are volume plugins like Volumes, but have a lifecycle independent of any individual Pod that uses the PV. This API object captures the details of the implementation of the storage, be that NFS, iSCSI, or a cloud-provider-specific storage system.
 
-output
+A PersistentVolumeClaim (PVC) is a request for storage by a user. It is similar to a Pod. Pods consume node resources and PVCs consume PV resources. Pods can request specific levels of resources (CPU and Memory). Claims can request specific size and access modes (e.g., they can be mounted ReadWriteOnce, ReadOnlyMany, ReadWriteMany, or ReadWriteOncePod, see AccessModes).
 
-```
-NAME            STATUS        VOLUME           CAPACITY   ACCESS MODES   STORAGECLASS    VOLUMEATTRIBUTESCLASS   AGE
-mongodb-pvc     Pending                                                  local-storage   <unset>                 7s
-```
+While PersistentVolumeClaims allow a user to consume abstract storage resources, it is common that users need PersistentVolumes with varying properties, such as performance, for different problems. Cluster administrators need to be able to offer a variety of PersistentVolumes that differ in more ways than size and access modes, without exposing users to the details of how those volumes are implemented. For these needs, there is the StorageClass resource.
+
+for more information, [Kubernetes PVs and PVCs](https://kubernetes.io/docs/concepts/storage/persistent-volumes)
