--- a/7.stateful-set.md
+++ b/7.stateful-set.md
@@ -2,55 +2,101 @@
 
 ## Create mongodb stateful set
 
-### 1. Create `mongodb-stateful-set.yaml`
+### 1. Create `mongodb-stateful-set.yaml` and will use `mongodb-config` and `mongodb-secret`
 
 ```yaml
+# mongodb-statefulset.yaml
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: mongodb
+    name: mongodb
 spec:
-  serviceName: "mongodb-service"
-  replicas: 1
-  selector:
-    matchLabels:
-      app: mongodb
-  template:
-    metadata:
-      labels:
-        app: mongodb
-    spec:
-      containers:
-        - name: mongodb
-          image: mongo:latest
-          ports:
-            - containerPort: 27017
-          env:
-            - name: MONGO_INITDB_DATABASE
-              valueFrom:
-                configMapKeyRef:
-                  name: mongodb-config
-                  key: MONGO_DB
-            - name: MONGO_INITDB_ROOT_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: MONGO_USER
-            - name: MONGO_INITDB_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: MONGO_PASSWORD
-          volumeMounts:
-            - name: mongodb-storage
-              mountPath: /data/db
-  volumeClaimTemplates:
-    - metadata:
-        name: mongodb-storage
-      spec:
-        accessModes: [ "ReadWriteOnce" ]
-        resources:
-          requests:
-            storage: 1Gi
-        storageClassName: local-storage
+    serviceName: "mongodb-service"
+    replicas: 1
+    selector:
+        matchLabels:
+            app: mongodb
+    template:
+        metadata:
+            labels:
+                app: mongodb
+        spec:
+            containers:
+                - name: mongodb
+                  image: mongo:latest
+                  ports:
+                      - containerPort: 27017
+                  env:
+                      - name: MONGO_INITDB_DATABASE
+                        valueFrom:
+                            configMapKeyRef:
+                                name: mongodb-config
+                                key: MONGO_DB
+                      - name: MONGO_INITDB_ROOT_USERNAME
+                        valueFrom:
+                            secretKeyRef:
+                                name: mongodb-secret
+                                key: MONGO_USER
+                      - name: MONGO_INITDB_ROOT_PASSWORD
+                        valueFrom:
+                            secretKeyRef:
+                                name: mongodb-secret
+                                key: MONGO_PASSWORD
+                  volumeMounts:
+                      - name: mongodb-storage
+                        mountPath: /data/db
+    volumeClaimTemplates:
+        - metadata:
+              name: mongodb-storage
+          spec:
+              accessModes: ["ReadWriteOnce"]
+              resources:
+                  requests:
+                      storage: 1Gi
+              storageClassName: local-storage
 ```
+
+input
+
+```bash
+kubectl get statefulset
+```
+
+output
+
+```
+NAME      READY   AGE
+mongodb   1/1     8m3s
+```
+
+input
+
+```bash
+kubectl get pvc
+```
+
+output
+
+```
+NAME                        STATUS   VOLUME       CAPACITY   ACCESS MODES   STORAGECLASS    VOLUMEATTRIBUTESCLASS   AGE
+mongodb-storage-mongodb-0   Bound    mongodb-pv   10Gi       RWO            local-storage   <unset>                 9m55s
+```
+
+It's just created pvc dynamically.
+
+input
+
+```bash
+kubectl get pod
+```
+
+output
+
+```
+NAME        READY   STATUS    RESTARTS   AGE
+mongodb-0   1/1     Running   0          17m
+```
+
+A StatefulSet runs a group of Pods, and maintains a sticky identity for each of those Pods. This is useful for managing applications that need persistent storage or a stable, unique network identity.
+
+for more information, [Kubernetes StatefulSet](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/)
